--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^3.0.1",
     "redux": "^4.2.1",
+    "redux-form": "^8.3.10",
     "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4"
   },
@@ -41,6 +42,6 @@
     ]
   },
   "devDependencies": {
-    "react-error-overlay": "^6.0.11"
+    "react-error-overlay": "^6.0.9"
   }
 }
