--- a/package.json
+++ b/package.json
@@ -3,19 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
     "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.1.3",
-    "react-router-dom": "^6.18.0",
-    "react-scripts": "^3.0.1",
-    "redux": "^4.2.1",
+    "react-redux": "^9.0.2",
+    "react-router-dom": "^6.20.1",
+    "react-scripts": "^5.0.1",
+    "redux": "^5.0.0",
     "redux-form": "^8.3.10",
-    "redux-thunk": "^2.4.2",
-    "web-vitals": "^2.1.4"
+    "redux-thunk": "^3.1.0",
+    "reselect": "^5.0.1",
+    "web-vitals": "^3.5.0"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
@@ -42,6 +43,6 @@
     ]
   },
   "devDependencies": {
-    "react-error-overlay": "^6.0.9"
+    "react-error-overlay": "^6.0.11"
   }
 }
