--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.0",
     "react-redux": "^9.0.2",
     "react-router-dom": "^6.20.1",
     "react-scripts": "^5.0.1",
@@ -44,5 +45,10 @@
   },
   "devDependencies": {
     "react-error-overlay": "^6.0.11"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!(axios))"
+    ]
   }
 }
