--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "my-app",
+  "name": "ReactSocialNetwork",
   "version": "0.1.0",
+  "homepage": "https://kasbreen94.github.io/ReactSocialNetwork",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^6.1.5",
@@ -20,6 +21,8 @@
     "web-vitals": "^3.5.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -44,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.1.0",
     "react-error-overlay": "^6.0.11"
   },
   "jest": {
