--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "homepage": "https://kasbreen94.github.io/ReactSocialNetwork",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.15.3",
+    "@mui/material": "^5.15.3",
+    "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
@@ -11,6 +17,7 @@
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "@types/uuid": "^9.0.7",
     "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -18,11 +25,13 @@
     "react-redux": "^9.0.2",
     "react-router-dom": "^6.20.1",
     "react-scripts": "^5.0.1",
+    "react-uuid": "^2.0.0",
     "redux": "^5.0.0",
     "redux-form": "^8.3.10",
     "redux-thunk": "^3.1.0",
     "reselect": "^5.0.1",
     "typescript": "^5.3.3",
+    "uuid": "^9.0.1",
     "web-vitals": "^3.5.0"
   },
   "scripts": {
